--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&display=swap" rel="stylesheet">
+    
     <title>Бухгалтерские услуги</title>
 </head>
 <body>
@@ -171,34 +180,34 @@
             <ul>
                 <li>
                     <img src="./img/our_advanteges_quality_icon.png" alt="quality">
-                    <p>Качество</p>
+                    <p class="advantage-text">Качество</p>
                 </li>
                 <li>
                     <img src="./img/our_advanteges_speed_icon.png" alt="speed">
-                    <p>Оперативность</p>
+                    <p class="advantage-text">Оперативность</p>
                 </li>
                 <li>
                     <img src="./img/our_advanteges_expert_icon.png" alt="expert">
-                    <p>Экспертность</p>
+                    <p class="advantage-text">Экспертность</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <div>
-            <h2>Связь с нами</h2>
-            <p>У вас остались вопросы? Напишите нам - мы ответим в ближайшее время!</p>
+        <div class="contacts">
+            <h2 class="contacts-title">Связь с нами</h2>
+            <p class="contacts-text">У вас остались вопросы? Напишите нам - мы ответим в ближайшее время!</p>
             <ul>   
                 <li>
-                    <a href="tel:81112223344">
+                    <a class="contacts-link" href="tel:81112223344">
                         <img src="./img/thelephone_icon.svg" alt="telephone">
                         <span>+7 (111) 222-33-44</span>
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:order@buhone.ru">
+                    <a class="contacts-link" href="mailto:order@buhone.ru">
                         <img src="./img/mail_icon.svg" alt="mail">
-                        <span>order@buhone.ru</span>
+                        <span >order@buhone.ru</span>
                     </a>
                 </li>
             </ul>
@@ -206,9 +215,9 @@
         <div>
             form
         </div>
-        <div>
-            <p>2019 (с) Все права защищены. БухОне.ру</p>
-            <p>Разработано: BuhOne</p>
+        <div >
+            <p class="footer-information">2019 (с) Все права защищены. БухОне.ру</p>
+            <p class="footer-information">Разработано: BuhOne</p>
         </div>
     </footer>
     <div>popup</div>
