--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Бухгалтерские услуги</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header center-container">
         <img class="header-img" src="./img/org_logo_icon.svg" alt="logo">
         <p class="header-title">BuhOne</p>
         <ul>
@@ -54,126 +54,136 @@
     </header>
     <main>
         <section class="desc">
-            <h1 class="desc-title">Бухгалтерские услуги в Санкт-Петербурге</h1>
-            <a class="desc-link" href="#">Наша презентация</a>
-        </section>
+            <div class="center-container">
+                <h1 class="desc-title">Бухгалтерские услуги в Санкт-Петербурге</h1>
+                <a class="desc-link" href="#">Наша презентация</a>
+            </div>
+            </section>
         <section class="service">
-            <h2 class="section-title">Наши услуги</h2>
-            <p class="section-sub-title">Мы специализируемся</p>
-            <ul class="service-list">
-                <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
-                <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
-                <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
-                <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
-                <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
-                <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
-            </ul>
+            <div class="center-container">
+                <h2 class="section-title">Наши услуги</h2>
+                <p class="section-sub-title">Мы специализируемся</p>
+                <ul class="service-list">
+                    <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
+                    <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
+                    <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
+                    <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
+                    <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
+                    <li><a class="service-item-link" href="#"><h3 class="service-item-title">Бухгалтерское обслуживание</h3></a></li>
+                </ul>
+            </div>
         </section>
         <section class="about-us">
-            <h2 class="section-title">О нас</h2>
-            <p class="section-sub-title">Компания <span class="about-us-styled-text">ИвановПром</span></p>
-            <p class="about-us-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
-                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
-                на латинице с начала XVI века. В то время некий безымянный печатник 
-                создал большую коллекцию размеров и форм шрифтов, используя Lorem 
-                Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
-                без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-            <ul class="ablut-us-list">
-                <li class="about-us-item-elements">
-                    <p class="about-us-element-count">90</p>
-                    <p class="about-us-element-title">Завершено крупных сделок</p>
-                    <a class="about-us-element-link" href="">Все кейсы</a>
-                </li>
-                <li class="about-us-item-elements">
-                    <p class="about-us-element-count">90</p>
-                    <p class="about-us-element-title">Завершено крупных сделок</p>
-                    <a class="about-us-element-link" href="">Все кейсы</a>
-                </li>
-                <li class="about-us-item-elements">
-                    <p class="about-us-element-count">90</p>
-                    <p class="about-us-element-title">Завершено крупных сделок</p>
-                    <a class="about-us-element-link" href="">Все кейсы</a>
-                </li>
-                <li class="about-us-item-elements">
-                    <p class="about-us-element-count">90</p>
-                    <p class="about-us-element-title">Завершено крупных сделок</p>
-                    <a class="about-us-element-link" href="">Все кейсы</a>
-                </li>
-            </ul>
+            <div class="center-container">
+                <h2 class="section-title">О нас</h2>
+                <p class="section-sub-title">Компания <span class="about-us-styled-text">ИвановПром</span></p>
+                <p class="about-us-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
+                    вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
+                    на латинице с начала XVI века. В то время некий безымянный печатник 
+                    создал большую коллекцию размеров и форм шрифтов, используя Lorem 
+                    Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
+                    без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                <ul class="ablut-us-list">
+                    <li class="about-us-item-elements">
+                        <p class="about-us-element-count">90</p>
+                        <p class="about-us-element-title">Завершено крупных сделок</p>
+                        <a class="about-us-element-link" href="">Все кейсы</a>
+                    </li>
+                    <li class="about-us-item-elements">
+                        <p class="about-us-element-count">90</p>
+                        <p class="about-us-element-title">Завершено крупных сделок</p>
+                        <a class="about-us-element-link" href="">Все кейсы</a>
+                    </li>
+                    <li class="about-us-item-elements">
+                        <p class="about-us-element-count">90</p>
+                        <p class="about-us-element-title">Завершено крупных сделок</p>
+                        <a class="about-us-element-link" href="">Все кейсы</a>
+                    </li>
+                    <li class="about-us-item-elements">
+                        <p class="about-us-element-count">90</p>
+                        <p class="about-us-element-title">Завершено крупных сделок</p>
+                        <a class="about-us-element-link" href="">Все кейсы</a>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="clients">
-            <h2 class="section-title">Наши клиенты</h2>
-            <p class="section-sub-title">С нами работают</p>
-            <ul>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-                <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
-            </ul>
+            <div class="center-container">
+                <h2 class="section-title">Наши клиенты</h2>
+                <p class="section-sub-title">С нами работают</p>
+                <ul>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                    <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
+                </ul>
+            </div>
         </section>
         <section class="reviews">
-            <h2 class="section-title">Отзывы</h2>
-            <p class="section-sub-title">Ваши благодарности</p>
-            <button class="reviews-button" type="button" disabled>Оставить отзыв</button>
-            <ul class="reviewes-list">
-                <li class="reviews-items">
-                    <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
-                        вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
-                        на латинице с начала XVI века. В то время некий безымянный печатник 
-                        создал большую коллекцию размеров и форм шрифтов, используя Lorem 
-                        Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
-                        без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-                    <img src="./img/ceo_round_photo.png" alt="photo">
-                    <p class="reviews-items-name">Екатерина Иванова</p>
-                    <p class="reviews-items-job">Директор ООО “Раз-два”</p>
-                </li>
-                <li class="reviews-items">
-                    <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
-                        вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
-                        на латинице с начала XVI века. В то время некий безымянный печатник 
-                        создал большую коллекцию размеров и форм шрифтов, используя Lorem 
-                        Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
-                        без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-                    <img src="./img/ceo_round_photo.png" alt="photo">
-                    <p class="reviews-items-name">Екатерина Иванова</p>
-                    <p class="reviews-items-job">Директор ООО “Раз-два”</p>
-                </li>
-                <li class="reviews-items">
-                    <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
-                        вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
-                        на латинице с начала XVI века. В то время некий безымянный печатник 
-                        создал большую коллекцию размеров и форм шрифтов, используя Lorem 
-                        Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
-                        без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-                    <img src="./img/ceo_round_photo.png" alt="photo">
-                    <p class="reviews-items-name">Екатерина Иванова</p>
-                    <p class="reviews-items-job">Директор ООО “Раз-два”</p>
-                </li>
-                <li class="reviews-items">
-                    <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
-                        вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
-                        на латинице с начала XVI века. В то время некий безымянный печатник 
-                        создал большую коллекцию размеров и форм шрифтов, используя Lorem 
-                        Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
-                        без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-                    <img src="./img/ceo_round_photo.png" alt="photo">
-                    <p class="reviews-items-name">Екатерина Иванова</p>
-                    <p class="reviews-items-job">Директор ООО “Раз-два”</p>
-                </li>
-            </ul>
-            <ul>
-                <li><button type="button">1</button></li>
-                <li><button type="button">2</button></li>
-                <li><button type="button">3</button></li>
-                <li><button type="button">4</button></li>
-            </ul>
-            <button type="button" disabled><img src="./img/arrow_left_icon.svg" alt="arrow_left"></button>
-            <button type="button"><img src="./img/arrow_right_icon.svg" alt="arrow_right"></button>
-        </section>
+            <div class="center-container">
+                <h2 class="section-title">Отзывы</h2>
+                <p class="section-sub-title">Ваши благодарности</p>
+                <button class="reviews-button" type="button" disabled>Оставить отзыв</button>
+                <ul class="reviewes-list">
+                    <li class="reviews-items">
+                        <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
+                            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
+                            на латинице с начала XVI века. В то время некий безымянный печатник 
+                            создал большую коллекцию размеров и форм шрифтов, используя Lorem 
+                            Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
+                            без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                        <img src="./img/ceo_round_photo.png" alt="photo">
+                        <p class="reviews-items-name">Екатерина Иванова</p>
+                        <p class="reviews-items-job">Директор ООО “Раз-два”</p>
+                    </li>
+                    <li class="reviews-items">
+                        <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
+                            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
+                            на латинице с начала XVI века. В то время некий безымянный печатник 
+                            создал большую коллекцию размеров и форм шрифтов, используя Lorem 
+                            Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
+                            без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                        <img src="./img/ceo_round_photo.png" alt="photo">
+                        <p class="reviews-items-name">Екатерина Иванова</p>
+                        <p class="reviews-items-job">Директор ООО “Раз-два”</p>
+                    </li>
+                    <li class="reviews-items">
+                        <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
+                            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
+                            на латинице с начала XVI века. В то время некий безымянный печатник 
+                            создал большую коллекцию размеров и форм шрифтов, используя Lorem 
+                            Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
+                            без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                        <img src="./img/ceo_round_photo.png" alt="photo">
+                        <p class="reviews-items-name">Екатерина Иванова</p>
+                        <p class="reviews-items-job">Директор ООО “Раз-два”</p>
+                    </li>
+                    <li class="reviews-items">
+                        <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
+                            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
+                            на латинице с начала XVI века. В то время некий безымянный печатник 
+                            создал большую коллекцию размеров и форм шрифтов, используя Lorem 
+                            Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
+                            без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                        <img src="./img/ceo_round_photo.png" alt="photo">
+                        <p class="reviews-items-name">Екатерина Иванова</p>
+                        <p class="reviews-items-job">Директор ООО “Раз-два”</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><button type="button">1</button></li>
+                    <li><button type="button">2</button></li>
+                    <li><button type="button">3</button></li>
+                    <li><button type="button">4</button></li>
+                </ul>
+                <button type="button" disabled><img src="./img/arrow_left_icon.svg" alt="arrow_left"></button>
+                <button type="button"><img src="./img/arrow_right_icon.svg" alt="arrow_right"></button>
+            </div>
+            </section>
         <section class="advantage">
             <h2 class="section-title">Наши преимущества</h2>
             <p class="section-sub-title">Мы предлагаем</p>
