--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="about-us">
             <div class="center-container">
                 <h2 class="section-title">О нас</h2>
-                <p class="section-sub-title">Компания <span class="about-us-styled-text">ИвановПром</span></p>
+                <p class="section-sub-title about-us-sub-title">Компания <span class="about-us-styled-text">ИвановПром</span></p>
                 <p class="about-us-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
                     вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                     на латинице с начала XVI века. В то время некий безымянный печатник 
@@ -109,8 +109,8 @@
         </section>
         <section class="clients">
             <div class="center-container">
-                <h2 class="section-title">Наши клиенты</h2>
-                <p class="section-sub-title">С нами работают</p>
+                <h2 class="section-title clients-title">Наши клиенты</h2>
+                <p class="section-sub-title clients-sub-title">С нами работают</p>
                 <ul>
                     <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
                     <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
@@ -140,7 +140,7 @@
                         <p class="reviews-items-name">Екатерина Иванова</p>
                         <p class="reviews-items-job">Директор ООО “Раз-два”</p>
                     </li>
-                    <li class="reviews-items">
+                    <li class="reviews-items display-visibility">
                         <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
                             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник 
@@ -151,7 +151,7 @@
                         <p class="reviews-items-name">Екатерина Иванова</p>
                         <p class="reviews-items-job">Директор ООО “Раз-два”</p>
                     </li>
-                    <li class="reviews-items">
+                    <li class="reviews-items display-visibility">
                         <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
                             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник 
@@ -162,7 +162,7 @@
                         <p class="reviews-items-name">Екатерина Иванова</p>
                         <p class="reviews-items-job">Директор ООО “Раз-два”</p>
                     </li>
-                    <li class="reviews-items">
+                    <li class="reviews-items display-visibility">
                         <p class="reviews-items-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
                             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник 
@@ -175,57 +175,61 @@
                     </li>
                 </ul>
                 <ul>
-                    <li><button type="button">1</button></li>
-                    <li><button type="button">2</button></li>
-                    <li><button type="button">3</button></li>
-                    <li><button type="button">4</button></li>
+                    <li><button class="review-slider-button slider-active" type="button"></button></li>
+                    <li><button class="review-slider-button" type="button"></button></li>
+                    <li><button class="review-slider-button" type="button"></button></li>
+                    <li><button class="review-slider-button" type="button"></button></li>
                 </ul>
-                <button type="button" disabled><img src="./img/arrow_left_icon.svg" alt="arrow_left"></button>
-                <button type="button"><img src="./img/arrow_right_icon.svg" alt="arrow_right"></button>
+                <button class="review-change-button button-disabled" type="button" disabled><img src="./img/arrow_left_icon.svg" alt="arrow_left"></button>
+                <button class="review-change-button" type="button"><img src="./img/arrow_right_icon.svg" alt="arrow_right"></button>
             </div>
             </section>
         <section class="advantage">
-            <h2 class="section-title">Наши преимущества</h2>
-            <p class="section-sub-title">Мы предлагаем</p>
-            <ul>
-                <li>
-                    <img src="./img/our_advanteges_quality_icon.png" alt="quality">
-                    <p class="advantage-text">Качество</p>
-                </li>
-                <li>
-                    <img src="./img/our_advanteges_speed_icon.png" alt="speed">
-                    <p class="advantage-text">Оперативность</p>
-                </li>
-                <li>
-                    <img src="./img/our_advanteges_expert_icon.png" alt="expert">
-                    <p class="advantage-text">Экспертность</p>
-                </li>
-            </ul>
+            <div class="center-container">
+                <h2 class="section-title">Наши преимущества</h2>
+                <p class="section-sub-title advantage-sub-title">Мы предлагаем</p>
+                <ul>
+                    <li class="advantage-elements">
+                        <img src="./img/our_advanteges_quality_icon.png" alt="quality">
+                        <p class="advantage-text">Качество</p>
+                    </li>
+                    <li class="advantage-elements">
+                        <img src="./img/our_advanteges_speed_icon.png" alt="speed">
+                        <p class="advantage-text">Оперативность</p>
+                    </li>
+                    <li class="advantage-elements">
+                        <img src="./img/our_advanteges_expert_icon.png" alt="expert">
+                        <p class="advantage-text">Экспертность</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
         <div class="contacts">
-            <h2 class="contacts-title">Связь с нами</h2>
-            <p class="contacts-text">У вас остались вопросы? Напишите нам - мы ответим в ближайшее время!</p>
-            <ul>   
-                <li>
-                    <a class="contacts-link" href="tel:81112223344">
-                        <img src="./img/thelephone_icon.svg" alt="telephone">
-                        <span>+7 (111) 222-33-44</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="contacts-link" href="mailto:order@buhone.ru">
-                        <img src="./img/mail_icon.svg" alt="mail">
-                        <span >order@buhone.ru</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="center-container">
+                <h2 class="contacts-title">Связь с нами</h2>
+                <p class="contacts-text">У вас остались вопросы? Напишите нам - мы ответим в ближайшее время!</p>
+                <ul>   
+                    <li>
+                        <a class="contacts-link" href="tel:81112223344">
+                            <img src="./img/thelephone_icon.svg" alt="telephone">
+                            <span>+7 (111) 222-33-44</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="contacts-link" href="mailto:order@buhone.ru">
+                            <img src="./img/mail_icon.svg" alt="mail">
+                            <span >order@buhone.ru</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                form
+            </div>
         </div>
-        <div>
-            form
-        </div>
-        <div >
+        <div class="center-container">
             <p class="footer-information">2019 (с) Все права защищены. БухОне.ру</p>
             <p class="footer-information">Разработано: BuhOne</p>
         </div>
