--- a/index.html
+++ b/index.html
@@ -18,39 +18,43 @@
 </head>
 <body>
     <header class="header center-container">
-        <img class="header-img" src="./img/org_logo_icon.svg" alt="logo">
-        <p class="header-title">BuhOne</p>
-        <ul>
-            <li>
-                <a class="header-contact-link" href="tel:81112223344">
-                    <img src="./img/phone_icon.svg" alt="phone">
-                    <span class="header-contact-text">8 (111) 222-33-44</span>
-                </a>
-            </li>
-            <li>
-                <img src="./img/clock_icon.svg" alt="clock">
-                <span class="header-contact-text">Пн-Пт 10:00-18:00</span>
-            </li>
-            <li>
-                <a class="header-contact-link" href="mailto:order@buhone.ru">
-                    <img src="./img/blue_mail_icon.svg" alt="mail">
-                    <span class="header-contact-text">order@buhone.ru</span>
-                </a>
-            </li>
-            <li>
-                <img src="./img/gps_point_icon.svg" alt="gps">
-                <span class="header-contact-text">Невский пр. 130</span>
-            </li>
-        </ul>
-        <nav>
-            <ul>
-                <li><a class="header-nav-link" href="#">Услуги</a></li>
-                <li><a class="header-nav-link" href="#">Кейсы</a></li>
-                <li><a class="header-nav-link" href="#">Главная</a></li>
-                <li><a class="header-nav-link" href="#">О компании</a></li>
-                <li><a class="header-nav-link" href="#">Контакты</a></li>
-            </ul>
-        </nav>
+        <div class="header-main-wrapper">
+            <div class="header-logo-wrapper">
+                <img class="header-img" src="./img/org_logo_icon.svg" alt="logo">
+                <p class="header-title">BuhOne</p>
+            </div>
+            <div class="header-right-flex-wrapper">
+                <ul class="header-info-flex-wrapper">
+                <li>
+                    <a class="header-contact-link" href="tel:81112223344">
+                        <img src="./img/phone_icon.svg" alt="phone">
+                        <span class="header-contact-text">8 (111) 222-33-44</span>
+                    </a>
+                </li>
+                <li>
+                    <img src="./img/clock_icon.svg" alt="clock">
+                    <span class="header-contact-text">Пн-Пт 10:00-18:00</span>
+                </li>
+                <li>
+                    <a class="header-contact-link" href="mailto:order@buhone.ru">
+                        <img src="./img/blue_mail_icon.svg" alt="mail">
+                        <span class="header-contact-text">order@buhone.ru</span>
+                    </a>
+                </li>
+                <li>
+                    <img src="./img/gps_point_icon.svg" alt="gps">
+                    <span class="header-contact-text">Невский пр. 130</span>
+                </li>
+                </ul>
+                <ul class="nav-list-flex-wrapper">
+                    <li><a class="header-nav-link" href="#">Услуги</a></li>
+                    <li><a class="header-nav-link" href="#">Кейсы</a></li>
+                    <li><a class="header-nav-link" href="#">Главная</a></li>
+                    <li><a class="header-nav-link" href="#">О компании</a></li>
+                    <li><a class="header-nav-link" href="#">Контакты</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <main>
         <section class="desc">
@@ -74,16 +78,18 @@
             </div>
         </section>
         <section class="about-us">
-            <div class="center-container">
-                <h2 class="section-title">О нас</h2>
-                <p class="section-sub-title about-us-sub-title">Компания <span class="about-us-styled-text">ИвановПром</span></p>
-                <p class="about-us-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
-                    вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
-                    на латинице с начала XVI века. В то время некий безымянный печатник 
-                    создал большую коллекцию размеров и форм шрифтов, используя Lorem 
-                    Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
-                    без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-                <ul class="ablut-us-list">
+            <div class="center-container about-us-flex-container">
+                <div class="about-us-left-flex-container">
+                    <h2 class="section-title">О нас</h2>
+                    <p class="section-sub-title about-us-sub-title">Компания <span class="about-us-styled-text">ИвановПром</span></p>
+                    <p class="about-us-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и 
+                        вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
+                        на латинице с начала XVI века. В то время некий безымянный печатник 
+                        создал большую коллекцию размеров и форм шрифтов, используя Lorem 
+                        Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил 
+                        без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                </div>
+                <ul class="about-us-list">
                     <li class="about-us-item-elements">
                         <p class="about-us-element-count">90</p>
                         <p class="about-us-element-title">Завершено крупных сделок</p>
@@ -111,7 +117,7 @@
             <div class="center-container">
                 <h2 class="section-title clients-title">Наши клиенты</h2>
                 <p class="section-sub-title clients-sub-title">С нами работают</p>
-                <ul>
+                <ul class="clients-flex-wrapper">
                     <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
                     <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
                     <li><a href="#"><img src="./img/microsoft_logo.png" alt="microsoft"></a></li>
@@ -188,9 +194,9 @@
             <div class="center-container">
                 <h2 class="section-title">Наши преимущества</h2>
                 <p class="section-sub-title advantage-sub-title">Мы предлагаем</p>
-                <ul>
+                <ul class="advantage-flex-wrapper">
                     <li class="advantage-elements">
-                        <img src="./img/our_advanteges_quality_icon.png" alt="quality">
+                        <img class="adv-img" src="./img/our_advanteges_quality_icon.png" alt="quality">
                         <p class="advantage-text">Качество</p>
                     </li>
                     <li class="advantage-elements">
@@ -224,12 +230,14 @@
                         </a>
                     </li>
                 </ul>
+                <div>
+                    form
+                    <button class="footer-button">Отправить сообщение</button>
+                </div>
             </div>
-            <div>
-                form
-            </div>
+            
         </div>
-        <div class="center-container">
+        <div class="center-container footer-flex-wrapper">
             <p class="footer-information">2019 (с) Все права защищены. БухОне.ру</p>
             <p class="footer-information">Разработано: BuhOne</p>
         </div>
